--- a/styles/architect.css
+++ b/styles/architect.css
@@ -4,6 +4,19 @@
 *{
     font-family: 'Work Sans', sans-serif;
 }
+
+.btn-primary{
+        border-radius: 8px;
+        background-color:  #FF900E;
+        padding: 20px 25px;
+        color: azure;
+        font-size: 1.25rem;
+        font-weight: 600;
+        cursor: pointer;
+        border: 0;
+}
+
+
 header{
     background-color: rgba(255, 228, 196, 0.575);
     padding: 50px 240px;
@@ -43,4 +56,30 @@ nav li a{
 }
 .banner-description{
     color: #727272;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive*/
+/* mobile*/
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav {
+        flex-direction: column;
+    }
+    
+}
+/*medium*/
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    nav{
+        flex-direction: column;
+    }
+    header{
+        padding: 50px;
+    }
+    
 }
