--- a/styles/architect.css
+++ b/styles/architect.css
@@ -5,6 +5,9 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+.banner-color-gray{
+    color: #727272;
+}
 .btn-primary{
         border-radius: 8px;
         background-color:  #FF900E;
@@ -54,40 +57,18 @@ nav li a{
     font-weight: 700;
     color: #131313;
 }
-.banner-description{
-    color: #727272;
-}
+
 .banner img{
     margin-top: 20px;
     width: 100%;
 }
 
-/* responsive*/
-/* mobile*/
-@media screen and (max-width: 576px) {
-    header{
-        padding: 20px;
-    }
-    nav {
-        flex-direction: column;
-    }
-    
-}
-/*medium*/
-@media screen and (min-width: 576px) and (max-width: 960px) {
-    nav{
-        flex-direction: column;
-    }
-    header{
-        padding: 50px ;
-    }
-    
-}
+
 
 /* main section*/
   main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
   }
 
   /*teams*/
@@ -116,3 +97,32 @@ nav li a{
     font-weight: 700;
 
  }
+
+ /* responsive*/
+/* mobile*/
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav, .teams-container {
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-right: 20px;
+        padding-left: 20px;
+      }
+    
+}
+/*medium*/
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    nav, .teams-container{
+        flex-direction: column;
+    }
+    header{
+        padding: 50px ;
+    }
+    
+}
