--- a/styles/architect.css
+++ b/styles/architect.css
@@ -19,6 +19,12 @@
         border: 0;
 }
 
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+
 
 header{
     background-color: rgba(255, 228, 196, 0.575);
@@ -32,11 +38,7 @@ nav{
 nav > ul{
     display: flex;
 }
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 nav li{
     list-style: none;
     margin-right: 30px;
