--- a/styles/architect.css
+++ b/styles/architect.css
@@ -100,27 +100,88 @@ nav li a{
 
  }
 
+ /* Facts section*/
+
+ .facts-card-container{
+    display: flex;
+    justify-content: space-around;
+ }
+
+ .facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px ;
+    
+ }
+
+ .facts-card-container .card-title{
+
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+ }
+.facts-card-container .card-stats{
+           font-size: 2.8rem;
+           color: #424242;
+           margin-top: 10px;
+           margin-bottom: 10px;
+}
+
+/*  sponsors*/
+
+.sponsors{
+    text-align: center;
+}
+
+.sponser-img-container{
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 50px;
+    gap: 20px;
+
+}
+
+.sponser-img-container img{
+
+    width: 165px;
+    
+}
+
+
+
  /* responsive*/
 /* mobile*/
 @media screen and (max-width: 576px) {
     header{
         padding: 20px;
     }
-    nav, .teams-container {
+    nav, .teams-container, 
+    .facts-card-container,
+    .sponser-img-container
+    {
         flex-direction: column;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    .teams-content{
+    .teams-content, .facts-card-container{
         padding-right: 20px;
         padding-left: 20px;
       }
     
 }
+.facts-card-container{
+    gap: 20px;
+}
 /*medium*/
 @media screen and (min-width: 576px) and (max-width: 960px) {
-    nav, .teams-container{
+    nav, 
+    .teams-container,
+    .sponser-img-container
+    {
         flex-direction: column;
     }
     header{
