--- a/styles/architect.css
+++ b/styles/architect.css
@@ -100,6 +100,52 @@ nav li a{
 
  }
 
+ /* features */
+
+ .feature{
+    margin-top: 130px;
+    gap: 100px;
+    display: flex;
+ }
+
+ .feature .section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+ }
+
+ .feature-content .card{
+           padding: 30px;
+           margin-bottom: 20px;
+          border-radius: 8px;
+          background: #FFF;
+          box-shadow: #727272; 
+ }
+ /* year*/
+ .ten-years{
+  border-radius: 8px;
+  background: #FF900E;
+  color: #FFF;
+  width: 250px;
+  height: 100px;
+  padding: 40px;
+  text-align: center;
+  position: relative;
+  bottom: 70px;
+
+ }
+ .ten-years h2{
+    font-size: 4rem;
+    margin: 0;
+
+ }
+
+ .ten-years p{
+    font-size: 1.5rem;
+ }
+.feature-img img{
+    height: 70%;
+    margin-left: 70px;
+}
  /* Facts section*/
 
  .facts-card-container{
@@ -159,10 +205,19 @@ nav li a{
         padding: 20px;
     }
     nav, .teams-container, 
+    .feature,
     .facts-card-container,
     .sponser-img-container
     {
         flex-direction: column;
+    }
+    .feature-img{
+        margin-left: 0;
+        width: 90%;
+    }
+    .ten-years{
+        position: static;
+        max-width: 300px;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
@@ -180,6 +235,7 @@ nav li a{
 @media screen and (min-width: 576px) and (max-width: 960px) {
     nav, 
     .teams-container,
+    .feature,
     .sponser-img-container
     {
         flex-direction: column;
